--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,34 @@
 @import "tailwindcss";
-@layer components{
-    .search-bar{
-        @apply w-0 group-hover:w-[300px] transition-all duration-300 rounded-full
-        group-hover:border group-hover:border-gray-500 px-3 py-1 focus:outline-none 
-         dark:border-gray-800 dark:bg-gray-900 group-hover:dark:bg-gray-800 
-        ;
-    }
+@custom-variant dark (&:where(.dark, .dark *));
 
+
+
+@theme {
+  /* Colors */
+  --color-primary: #f42c37;
+  --color-secondary: #f42c37;
+  --color-brand-yellow: #fdc62e;
+  --color-brand-green: #2dcc6f;
+  --color-brand-blue: #1376f4;
+  --color-brand-white: #eeeeee;
+
+  /* Container settings */
+  --container-center: true; /* Enables center */
+  --container-padding: 1rem; /* Default */
+  --container-padding-sm: 3rem; /* For sm breakpoint */
 }
 
+
+@layer components {
+  .search-bar {
+    @apply w-0 group-hover:w-[300px] transition-all duration-300 rounded-full
+      group-hover:border group-hover:border-gray-500 px-3 py-1 focus:outline-none
+      dark:border-gray-800 dark:bg-gray-900 group-hover:dark:bg-gray-800;
+  }
+}
+@layer utilities {
+  .hero-bg-color{
+  
+    @apply  bg-gradient-to-tr from-gray-300/80 to-gray-100;
+  }
+}
