--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -29,6 +29,7 @@
 @layer utilities {
   .hero-bg-color{
   
-    @apply  bg-gradient-to-tr from-gray-300/80 to-gray-100;
+    @apply  bg-gradient-to-tr from-gray-300/80 to-gray-100 dark:from-gray-900 dark:to-gray-800
+    dark:text-white;
   }
 }
